# autonomus_car

./: README.MD  main.c
esp32_cam/: CMakeLists.txt  godar-cam.html  sdkconfig
esp32_cam/main/: CMakeLists.txt  camera.c  camera.h  idf_component.yml  main.c  sensors.c  sensors.h  wifi_client.c  wifi_client.h
godar/: CMakeLists.txt  godar.html  sdkconfig
godar/main/: CMakeLists.txt  hello_world_main.c  mecatronic.c  mecatronic.h  streaming.c  streaming.h  wifi_server.c  wifi_server.h
